# brain_graph

./: .gitignore  DEVELOPMENT.md  README.md  README_zh.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: GRAPH_QUALITY_REVIEW.md
sidecars/: build_markitdown_sidecar.sh  markitdown_sidecar.py
src/: App.tsx  embedding.ts  graph.ts  i18n.ts  index.css  main.ts  main.ts.bak  main.tsx  model.ts  projects.ts  render2d.ts  render3d.ts  styles.css  types.ts  visualEncoding.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: MarkdownPreview.tsx  SettingsDialog.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/ui/: dialog.tsx  scroll-area.tsx  select.tsx
src/components/workspace/: DocumentWorkspace.tsx  GraphDrawer.tsx  SummaryDrawer.tsx
src/lib/: summary.ts
