[package]
name = "brain_graph"
version = "0.1.0"
description = "Brain Graph desktop text network analysis"
authors = ["zhaoyang"]
edition = "2021"

[lib]
name = "brain_graph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
