[package]
name = "anshu_doc"
version = "0.1.0"
description = "AnshuDoc desktop document intelligence"
authors = ["zhaoyang"]
edition = "2021"

[lib]
name = "anshu_doc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", features = ["json"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
text-splitter = { version = "0.29", features = ["markdown"] }
sha2 = "0.10"
